Fix: @ReadOnly collections data not visible with Dark theme

--- a/OpenXava/web/style/base.css
+++ b/OpenXava/web/style/base.css
@@ -1196,7 +1196,7 @@ input[type="button"] {
 	height: 35px; 
 }
 
-.ox-list-pair a, .ox-list-odd a {
+.ox-list-pair a, .ox-list-odd a, .ox-list-pair, .ox-list-odd {
 	color: var(--list-row-a-color); 
 }
 
